--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a random normal variable with given parameters , n=5000\n"
+    "# Generate a random normal variable with given parameters , n=5000\n",
+    "import numpy as np\n",
+    "np.random."
    ]
   },
   {
