Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,8 +51,16 @@
    "outputs": [],
    "source": [
     "# Generate a random normal variable with given parameters , n=5000\n",
-    "import numpy as np\n",
-    "np.random."
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.norm()"
    ]
   },
   {
