Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.normal()"
+    "np.random.normal(14, 2.8, 5000)"
    ]
   },
   {
