Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.normal(14, 2.8, 5000)"
+    "nrm = np.random.normal(14, 2.8, 5000)"
    ]
   },
   {
