--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,8 @@
     }
    ],
    "source": [
-    "# Calculate a histogram for above data distribution\n"
+    "# Calculate a histogram for above data distribution\n",
+    "plt.hist(n)"
    ]
   },
   {
