--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "# Calculate the normal Density function \n",
-    "density = None"
+    "density = "
    ]
   },
   {
