--- a/index.ipynb
+++ b/index.ipynb
@@ -136,10 +136,10 @@
    "outputs": [],
    "source": [
     "# Calculate the normal Density function \n",
-    "5000 values with  μ=14μ=14  and  σ=2.8\n",
+    "\n",
     "mu = 14\n",
     "std = 2.8\n",
-    "density = (1/"
+    "density = (1/st"
    ]
   },
   {
