--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "mu = 14\n",
     "std = 2.8\n",
-    "density = (1/(std * sqrt()"
+    "density = (1/(std * sqrt(2*)"
    ]
   },
   {
