Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,10 +136,10 @@
    "outputs": [],
    "source": [
     "# Calculate the normal Density function \n",
-    "\n",
+    "from math import pi\n",
     "mu = 14\n",
     "std = 2.8\n",
-    "density = (1/(std * sqrt(2*)"
+    "density = (1/(std * sqrt(2*pi)))"
    ]
   },
   {
