Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
     "from math import pi, e\n",
     "mu = 14\n",
     "std = 2.8\n",
-    "density = (1/(std * sqrt(2*pi))) * e"
+    "density = (1/(std * sqrt(2*pi))) * e**()"
    ]
   },
   {
