--- a/index.ipynb
+++ b/index.ipynb
@@ -131,9 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-5-bff066c4871b>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-bff066c4871b>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    density = (1/(std * sqrt(2*pi))) * e**((−(x−mu)**2/ (2*std**2)))\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the normal Density function \n",
     "from math import pi, e\n",
