--- a/index.ipynb
+++ b/index.ipynb
@@ -131,15 +131,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<ipython-input-5-bff066c4871b>, line 5)",
+     "evalue": "invalid character in identifier (<ipython-input-6-274b617d7a4b>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-bff066c4871b>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    density = (1/(std * sqrt(2*pi))) * e**((−(x−mu)**2/ (2*std**2)))\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-274b617d7a4b>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    density = (1/(std * sqrt(2*pi))) * e**((−1 * (x−mu)**2/ (2*std**2)))\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
      ]
     }
    ],
@@ -148,7 +148,7 @@
     "from math import pi, e\n",
     "mu = 14\n",
     "std = 2.8\n",
-    "density = (1/(std * sqrt(2*pi))) * e**((−(x−mu)**2/ (2*std**2)))"
+    "density = (1/(std * sqrt(2*pi))) * e**((−1 * (x−mu)**2/ (2*std**2)))"
    ]
   },
   {
