Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,7 +148,7 @@
     "from math import pi, e\n",
     "mu = 14\n",
     "std = 2.8\n",
-    "density = (1/(std * sqrt(2*pi))) * e**((−1 * (x−mu)**2/ (2*std**2)))"
+    "density = (1/(std * sqrt(2*pi))) * e**(((−1 * (x−mu)**2/ (2*std**2)))"
    ]
   },
   {
