Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,8 @@
     "from math import pi, e, sqrt\n",
     "mu = 14\n",
     "std = 2.8\n",
-    "density = (1/(std * sqrt(2*pi))) * e**((-1* ((x - mu)**2/ (2*std**2))))"
+    "def dens()\n",
+    "density = "
    ]
   },
   {
