Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,8 @@
     "from math import pi, e, sqrt\n",
     "mu = 14\n",
     "std = 2.8\n",
-    "def dens()\n",
+    "def dens(arr):\n",
+    "    for x in arr:\n",
     "density = "
    ]
   },
