Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,8 +151,8 @@
     "from math import pi, e, sqrt\n",
     "mu = 14\n",
     "std = 2.8\n",
-    "def dens(arr):\n",
-    "    for x in arr:\n",
+    "def dens(x):\n",
+    "    r\n",
     "density = "
    ]
   },
