Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,8 +152,8 @@
     "mu = 14\n",
     "std = 2.8\n",
     "def dens(x):\n",
-    "    r\n",
-    "density = "
+    "    return (1/(std * sqrt(2*pi))) * e**((-1* ((x - mu)**2/ (2*std**2))))\n",
+    "density = [dens(x) for x in]"
    ]
   },
   {
