Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(dens)"
+    "plt.li\n",
+    "plt.hist(density)"
    ]
   },
   {
