Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.li\n",
+    "plt.plot(x,)\n",
     "plt.hist(density)"
    ]
   },
