Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    ],
    "source": [
     "#plt.scatter(nrm, density)\n",
-    "plt.hist(density, density=True)"
+    "plt.hist(nrm, bins=20)"
    ]
   },
   {
