--- a/index.ipynb
+++ b/index.ipynb
@@ -229,6 +229,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -254,7 +261,7 @@
     }
    ],
    "source": [
-    "sns.distplot(nrm)\n"
+    "sns.distplot(nrm,hist=True, kde=True)\n"
    ]
   },
   {
